Add English translations and localize UI text
Introduces Translations.resx for English resource strings and updates German and French resource files with new entries for system requirements and options. Refactors AboutPage.xaml and SettingsPage.xaml to use translation bindings for UI text, improving localization and maintainability.

--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -2039,4 +2039,20 @@
   <data name="About" xml:space="preserve">
     <value>Über</value>
   </data>
+  <data name="RAM:" xml:space="preserve">
+    <value>Arbeitsspeicher:</value>
+    <comment>RAM requirement</comment>
+  </data>
+  <data name="4 GB minimum, 8 GB recommended" xml:space="preserve">
+    <value>4 GB mindestens, 8 GB empfohlen</value>
+    <comment>RAM requirement with recommendation</comment>
+  </data>
+  <data name="200 MB available space" xml:space="preserve">
+    <value>200 MB verfügbarer Speicherplatz</value>
+    <comment>Storage space requirement</comment>
+  </data>
+  <data name="System language" xml:space="preserve">
+    <value>Systemsprache</value>
+    <comment>System language option</comment>
+  </data>
 </root>
